fixed the wrapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,9 @@ div span{
 
 /* Menu Bar */
 ul {
-    line-height: 130%;    
+    line-height: 130%;   
+    width: 80%;
+    padding-left: 10%; 
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -97,10 +99,8 @@ li {
 }
 
 li a {
-    display: inline;
     color: #5D576B;
-    text-align: center;
-    padding: 14px 1.5vw;
+    padding: 1.5vh;
     text-decoration: none;
     font-family: 'Quicksand';
 }
